src/core/snapshots/vue_template_compiler__core__parser__test__dir_parse_error.snap
---
source: src/core/parser.rs
expression: dir

---
Attr:
  name: v-
  value:
    content:
      raw: tt
      ops:
        bits: 18
    location:
      start:
        offset: 6
        line: 1
        column: 7
      end:
        offset: 10
        line: 1
        column: 11
  name_loc:
    start:
      offset: 3
      line: 1
      column: 4
    end:
      offset: 5
      line: 1
      column: 6
  location:
    start:
      offset: 3
      line: 1
      column: 4
    end:
      offset: 10
      line: 1
      column: 11

