src/core/snapshots/vue_template_compiler__core__parser__test__on_dir-5.snap
---
source: src/core/parser.rs
expression: dir

---
Dir:
  name: "on"
  argument: ~
  modifiers:
    - stop
  expression:
    content:
      raw: tt
      ops:
        bits: 18
    location:
      start:
        offset: 10
        line: 1
        column: 11
      end:
        offset: 14
        line: 1
        column: 15
  head_loc:
    start:
      offset: 3
      line: 1
      column: 4
    end:
      offset: 9
      line: 1
      column: 10
  location:
    start:
      offset: 3
      line: 1
      column: 4
    end:
      offset: 14
      line: 1
      column: 15

